ANTLR Test/ANTLR Test/obj/Debug/sparqlParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.2-SNAPSHOT
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from D:\Users\Admin\Source\Repos\ANTLR-Test\ANTLR Test\ANTLR Test\sparql.g4 by ANTLR 4.2-SNAPSHOT

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591

namespace ANTLR_Test {

	using System;
	using System.Xml.Linq;	
	using System.Collections;

using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.2-SNAPSHOT")]
[System.CLSCompliant(false)]
public partial class sparqlParser : Parser {
	public const int
		T__71=1, T__70=2, T__69=3, T__68=4, T__67=5, T__66=6, T__65=7, T__64=8, 
		T__63=9, T__62=10, T__61=11, T__60=12, T__59=13, T__58=14, T__57=15, T__56=16, 
		T__55=17, T__54=18, T__53=19, T__52=20, T__51=21, T__50=22, T__49=23, 
		T__48=24, T__47=25, T__46=26, T__45=27, T__44=28, T__43=29, T__42=30, 
		T__41=31, T__40=32, T__39=33, T__38=34, T__37=35, T__36=36, T__35=37, 
		T__34=38, T__33=39, T__32=40, T__31=41, T__30=42, T__29=43, T__28=44, 
		T__27=45, T__26=46, T__25=47, T__24=48, T__23=49, T__22=50, T__21=51, 
		T__20=52, T__19=53, T__18=54, T__17=55, T__16=56, T__15=57, T__14=58, 
		T__13=59, T__12=60, T__11=61, T__10=62, T__9=63, T__8=64, T__7=65, T__6=66, 
		T__5=67, T__4=68, T__3=69, T__2=70, T__1=71, T__0=72, NumericLiteralPositive=73, 
		NumericLiteralNegative=74, BooleanLiteral=75, String=76, BlankNode=77, 
		IRI_REF=78, PNAME_NS=79, PREFIXED_NAME=80, PNAME_LN=81, BLANK_NODE_LABEL=82, 
		VAR1=83, VAR2=84, LANGTAG=85, INTEGER=86, DECIMAL=87, DOUBLE=88, INTEGER_POSITIVE=89, 
		DECIMAL_POSITIVE=90, DOUBLE_POSITIVE=91, INTEGER_NEGATIVE=92, DECIMAL_NEGATIVE=93, 
		DOUBLE_NEGATIVE=94, EXPONENT=95, STRING_LITERAL1=96, STRING_LITERAL2=97, 
		STRING_LITERAL_LONG1=98, STRING_LITERAL_LONG2=99, ECHAR=100, NIL=101, 
		WS=102, ANON=103, PN_CHARS_BASE=104, PN_CHARS_U=105, VARNAME=106, PN_CHARS=107, 
		PN_PREFIX=108, PN_LOCAL=109;
	public static readonly string[] tokenNames = {
		"<INVALID>", "'DISTINCT'", "'isBLANK'", "'Langmatches'", "'['", "'WHERE'", 
		"'*'", "'FILTER'", "'<'", "'isIRI'", "'!='", "'<='", "'REGEX'", "'}'", 
		"'^^'", "'ORDER'", "'PREFIX'", "'LANGMATCHES'", "'langmatches'", "')'", 
		"'regex'", "'BOUND'", "'Bound'", "'langMatches'", "'DESC'", "'='", "'DATATYPE'", 
		"'STR'", "'dataType'", "'BASE'", "'datatype'", "'FROM'", "'sameTerm'", 
		"'str'", "'!'", "'SELECT'", "']'", "'OPTIONAL'", "'BY'", "','", "'OFFSET'", 
		"'ASC'", "'-'", "'('", "'Datatype'", "'DataType'", "'LangMatches'", "'isURI'", 
		"'{'", "'bound'", "'isLITERAL'", "'Lang'", "'ASK'", "'GRAPH'", "'a'", 
		"'.'", "'REDUCED'", "'+'", "';'", "'CONSTRUCT'", "'lang'", "'LANG'", "'&&'", 
		"'||'", "'>'", "'Regex'", "'DESCRIBE'", "'LIMIT'", "'/'", "'>='", "'Str'", 
		"'UNION'", "'NAMED'", "NumericLiteralPositive", "NumericLiteralNegative", 
		"BooleanLiteral", "String", "BlankNode", "IRI_REF", "PNAME_NS", "PREFIXED_NAME", 
		"PNAME_LN", "BLANK_NODE_LABEL", "VAR1", "VAR2", "LANGTAG", "INTEGER", 
		"DECIMAL", "DOUBLE", "INTEGER_POSITIVE", "DECIMAL_POSITIVE", "DOUBLE_POSITIVE", 
		"INTEGER_NEGATIVE", "DECIMAL_NEGATIVE", "DOUBLE_NEGATIVE", "EXPONENT", 
		"STRING_LITERAL1", "STRING_LITERAL2", "STRING_LITERAL_LONG1", "STRING_LITERAL_LONG2", 
		"ECHAR", "NIL", "WS", "ANON", "PN_CHARS_BASE", "PN_CHARS_U", "VARNAME", 
		"PN_CHARS", "PN_PREFIX", "PN_LOCAL"
	};
	public const int
		RULE_query = 0, RULE_prologue = 1, RULE_basedecl = 2, RULE_prefixDecl = 3, 
		RULE_selectQuery = 4, RULE_constructQuery = 5, RULE_describeQuery = 6, 
		RULE_askQuery = 7, RULE_datasetClause = 8, RULE_defaultGraphClause = 9, 
		RULE_namedGraphClause = 10, RULE_sourceSelector = 11, RULE_whereClause = 12, 
		RULE_solutionModifier = 13, RULE_limitOffsetClauses = 14, RULE_orderClause = 15, 
		RULE_orderCondition = 16, RULE_limitClause = 17, RULE_offsetClause = 18, 
		RULE_groupGraphPattern = 19, RULE_triplesBlock = 20, RULE_graphPatternNotTriples = 21, 
		RULE_optionalGraphPattern = 22, RULE_graphGraphPattern = 23, RULE_groupOrUnionGraphPattern = 24, 
		RULE_filter = 25, RULE_constraint = 26, RULE_functionCall = 27, RULE_argList = 28, 
		RULE_constructTemplate = 29, RULE_constructTriples = 30, RULE_triplesSameSubject = 31, 
		RULE_propertyListNotEmpty = 32, RULE_propertyList = 33, RULE_objectList = 34, 
		RULE_object = 35, RULE_verb = 36, RULE_triplesNode = 37, RULE_blankNodePropertyList = 38, 
		RULE_collection = 39, RULE_graphNode = 40, RULE_varOrTerm = 41, RULE_varOrIRIref = 42, 
		RULE_var = 43, RULE_graphTerm = 44, RULE_expression = 45, RULE_conditionalOrExpression = 46, 
		RULE_conditionalAndExpression = 47, RULE_valueLogical = 48, RULE_relationalExpression = 49, 
		RULE_numericExpression = 50, RULE_additiveExpression = 51, RULE_multiplicativeExpression = 52, 
		RULE_unaryExpression = 53, RULE_primaryExpression = 54, RULE_brackettedExpression = 55, 
		RULE_builtInCall = 56, RULE_regexExpression = 57, RULE_iRIrefOrFunction = 58, 
		RULE_rDFLiteral = 59, RULE_iRIref = 60, RULE_numericLiteral = 61, RULE_numericLiteralUnsigned = 62;
	public static readonly string[] ruleNames = {
		"query", "prologue", "basedecl", "prefixDecl", "selectQuery", "constructQuery", 
		"describeQuery", "askQuery", "datasetClause", "defaultGraphClause", "namedGraphClause", 
		"sourceSelector", "whereClause", "solutionModifier", "limitOffsetClauses", 
		"orderClause", "orderCondition", "limitClause", "offsetClause", "groupGraphPattern", 
		"triplesBlock", "graphPatternNotTriples", "optionalGraphPattern", "graphGraphPattern", 
		"groupOrUnionGraphPattern", "filter", "constraint", "functionCall", "argList", 
		"constructTemplate", "constructTriples", "triplesSameSubject", "propertyListNotEmpty", 
		"propertyList", "objectList", "object", "verb", "triplesNode", "blankNodePropertyList", 
		"collection", "graphNode", "varOrTerm", "varOrIRIref", "var", "graphTerm", 
		"expression", "conditionalOrExpression", "conditionalAndExpression", "valueLogical", 
		"relationalExpression", "numericExpression", "additiveExpression", "multiplicativeExpression", 
		"unaryExpression", "primaryExpression", "brackettedExpression", "builtInCall", 
		"regexExpression", "iRIrefOrFunction", "rDFLiteral", "iRIref", "numericLiteral", 
		"numericLiteralUnsigned"
	};

	public override string GrammarFileName { get { return "sparql.g4"; } }

	public override string[] TokenNames { get { return tokenNames; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }


		
	public	XElement x=new XElement("sparql"), spo=new XElement("spo");

	public sparqlParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class QueryContext : ParserRuleContext {
		public AskQueryContext askQuery() {
			return GetRuleContext<AskQueryContext>(0);
		}
		public DescribeQueryContext describeQuery() {
			return GetRuleContext<DescribeQueryContext>(0);
		}
		public PrologueContext prologue() {
			return GetRuleContext<PrologueContext>(0);
		}
		public ConstructQueryContext constructQuery() {
			return GetRuleContext<ConstructQueryContext>(0);
		}
		public SelectQueryContext selectQuery() {
			return GetRuleContext<SelectQueryContext>(0);
		}
		public QueryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_query; }
		public override void EnterRule(IParseTreeListener listener) {
			IsparqlListener typedListener = listener as IsparqlListener;
			if (typedListener != null) typedListener.EnterQuery(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsparqlListener typedListener = listener as IsparqlListener;
			if (typedListener != null) typedListener.ExitQuery(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsparqlVisitor<TResult> typedVisitor = visitor as IsparqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitQuery(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public QueryContext query() {
		QueryContext _localctx = new QueryContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_query);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 126; prologue();
			State = 131;
			switch (_input.La(1)) {
			case 35:
				{
				State = 127; selectQuery();
				}
				break;
			case 59:
				{
				State = 128; constructQuery();
				}
				break;
			case 66:
				{
				State = 129; describeQuery();
				}
				break;
			case 52:
				{
				State = 130; askQuery();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			 	Console.WriteLine("ok");  
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrologueContext : ParserRuleContext {
		public PrefixDeclContext prefixDecl(int i) {
			return GetRuleContext<PrefixDeclContext>(i);
		}
		public BasedeclContext basedecl() {
			return GetRuleContext<BasedeclContext>(0);
		}
		public IReadOnlyList<PrefixDeclContext> prefixDecl() {
			return GetRuleContexts<PrefixDeclContext>();
		}
		public PrologueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_prologue; }
		public override void EnterRule(IParseTreeListener listener) {
			IsparqlListener typedListener = listener as IsparqlListener;
			if (typedListener != null) typedListener.EnterPrologue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsparqlListener typedListener = listener as IsparqlListener;
			if (typedListener != null) typedListener.ExitPrologue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsparqlVisitor<TResult> typedVisitor = visitor as IsparqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrologue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrologueContext prologue() {
		PrologueContext _localctx = new PrologueContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_prologue);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 136;
			_la = _input.La(1);
			if (_la==29) {
				{
				State = 135; basedecl();
				}
			}

			State = 141;
			_errHandler.Sync(this);
			_la = _input.La(1);
			while (_la==16) {
				{
				{
				State = 138; prefixDecl();
				}
				}
				State = 143;
				_errHandler.Sync(this);
				_la = _input.La(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BasedeclContext : ParserRuleContext {
		public ITerminalNode IRI_REF() { return GetToken(sparqlParser.IRI_REF, 0); }
		public BasedeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_basedecl; }
		public override void EnterRule(IParseTreeListener listener) {
			IsparqlListener typedListener = listener as IsparqlListener;
			if (typedListener != null) typedListener.EnterBasedecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsparqlListener typedListener = listener as IsparqlListener;
			if (typedListener != null) typedListener.ExitBasedecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsparqlVisitor<TResult> typedVisitor = visitor as IsparqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBasedecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BasedeclContext basedecl() {
		BasedeclContext _localctx = new BasedeclContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_basedecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 144; Match(29);
			State = 145; Match(IRI_REF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrefixDeclContext : ParserRuleContext {
		public IToken _PNAME_NS;
		public IToken _IRI_REF;
		public ITerminalNode IRI_REF() { return GetToken(sparqlParser.IRI_REF, 0); }
		public ITerminalNode PNAME_NS() { return GetToken(sparqlParser.PNAME_NS, 0); }
		public PrefixDeclContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int GetRuleIndex() { return RULE_prefixDecl; }
		public override void EnterRule(IParseTreeListener listener) {
			IsparqlListener typedListener = listener as IsparqlListener;
			if (typedListener != null) typedListener.EnterPrefixDecl(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IsparqlListener typedListener = listener as IsparqlListener;
			if (typedListener != null) typedListener.ExitPrefixDecl(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IsparqlVisitor<TResult> typedVisitor = visitor as IsparqlVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrefixDecl(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrefixDeclContext prefixDecl() {
		PrefixDeclContext _localctx = new PrefixDeclContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_prefixDecl);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 147; Match(16);
			State = 148; _localctx._PNAME_NS = Match(PNAME_NS);
			State = 149; _localctx._IRI_REF = Match(IRI_REF);
			 	x.Add(new XElement("prefix",new XElement("name", (_localctx._PNAME_NS!=null?_localctx._PNAME_NS.Text:null)), new XElement("name", (_localctx._IRI_REF!=null?_localctx._IRI_REF.Text:null)))); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

